<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_story_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.story.AddStoryActivity">

    <ImageView
        android:id="@+id/iv_add_photo_preview"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/add_photo_preview"
        android:scaleType="centerCrop"
        android:src="@drawable/place_holder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_gallery"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo_preview" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/gallery"
        app:layout_constraintStart_toEndOf="@id/button_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo_preview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_gallery">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deskripsi"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_description" />

    <ProgressBar
        android:id="@+id/progresbar_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
